--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </div>
         </div>
         <div class="col-md-4">
-          <div class="absence">
+          <div class="absence green">
              <div class="tile-content">
               <span>886. ARTICLE 86.</span>
               <h3>Absence Without Leave</h3>
@@ -101,13 +101,85 @@
         </div>
         </div>
         <div class="col-md-4">
-          <div class="failure">
+          <div class="failure yellow">
             <div class="tile-content">
               <span>892. ARTICLE 92.</span>
               <h3>Failure to Obey Order or Regulation</h3>
             </div>
             <div class="status">
-              <p>3 of 3 Completed</p>
+              <p>2 of 5 Completed</p>
+            </div>
+        </div>
+        </div>
+      </div>
+
+        <div class="row">
+        <div class="col-md-4">
+          <div class="false green">
+             <div class="tile-content">
+              <span>907. ARTICLE 107. </span>
+              <h3>False Statements</h3>
+            </div>
+          <div class="status">
+          <p>5 of 5 Completed</p>
+          </div>
+        </div>
+        </div>
+        <div class="col-md-4">
+          <div class="drunken yellow">
+             <div class="tile-content">
+              <span>911. ARTICLE 111. </span>
+              <h3>Drunken or Reckless Driving</h3>
+            </div>
+          <div class="status">
+          <p>2 of 3 Completed</p>
+          </div>
+        </div>
+        </div>
+        <div class="col-md-4">
+          <div class="wrong red">
+            <div class="tile-content">
+              <span>912a. ARTICLE 112a.</span>
+              <h3>Wrongful Use, Possession, Etc., of Controlled Substances</h3>
+            </div>
+            <div class="status">
+              <p>1 of 5 Completed</p>
+            </div>
+        </div>
+        </div>
+      </div>
+
+          <div class="row">
+        <div class="col-md-4">
+          <div class="rape red">
+             <div class="tile-content">
+              <span>920. ARTICLE 120.</span>
+              <h3>Rape and Carnal Knowledge</h3>
+            </div>
+          <div class="status">
+          <p>0 of 2 Completed</p>
+          </div>
+        </div>
+        </div>
+        <div class="col-md-4">
+          <div class="larceny yellow">
+             <div class="tile-content">
+              <span>921. ARTICLE 121.</span>
+              <h3>Larceny and Wrongful Appropriation</h3>
+            </div>
+          <div class="status">
+          <p>2 of 4 Completed</p>
+          </div>
+        </div>
+        </div>
+        <div class="col-md-4">
+          <div class="assault red">
+            <div class="tile-content">
+              <span>928. ARTICLE 128.</span>
+              <h3>Assault</h3>
+            </div>
+            <div class="status">
+              <p>0 of 5 Completed</p>
             </div>
         </div>
         </div>
