--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div class="row">
     	  <div class="col-md-4"> <a id="wsnavtoggle" class="animated-arrow"><span></span></a></div>
         <div class="col-md-4"><h3 class="title">Primer</h3></div> 
-        <div class="col-md-4 view"><h3 Class="view"><a href="#">View All Articles</a></h3></div>
+        <div class="col-md-4 view"><h3 Class="view"><a href="#">View All Articles<i class="fa fa-newspaper-o" aria-hidden="true"></i></a></h3></div>
         </div>  
         
     </div>
@@ -174,7 +174,7 @@
         </a>
         </div>
         <div class="col-md-4 tile-hover">
-          <a href="#">
+          <a href="larceny.html">
           <div class="larceny yellow">
              <div class="tile-content">
               <span>921. ARTICLE 121.</span>
