--- a/splash.html
+++ b/splash.html
@@ -34,6 +34,7 @@
         <h1>Uniform Code of Military Justice (UCMJ)</h1>
         <hr>
         <h3>Primer Articles</h3>
+        <a href="index.html" class="btn btn-default">Begin<span class="fa fa-angle-right" aria-hidden="true"></span></a>
     </div>
 </body>
 </html>
