--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           </div>
         </div>
         <div class="col-md-4 tile-hover">
-          <a href="#">
+          <a href="larceny.html">
           <div class="absence green">
              <div class="tile-content">
               <span>886. ARTICLE 86.</span>
@@ -103,7 +103,7 @@
        </a>
         </div>
         <div class="col-md-4 tile-hover">
-          <a href="#">
+          <a href="larceny.html">
           <div class="failure yellow">
             <div class="tile-content">
               <span>892. ARTICLE 92.</span>
@@ -119,7 +119,7 @@
 
         <div class="row">
         <div class="col-md-4 tile-hover">
-          <a href="#">
+          <a href="larceny.html">
           <div class="false green">
              <div class="tile-content">
               <span>907. ARTICLE 107. </span>
@@ -132,7 +132,7 @@
         </a>
         </div>
         <div class="col-md-4 tile-hover">
-          <a href="#">
+          <a href="larceny.html">
           <div class="drunken yellow">
              <div class="tile-content">
               <span>911. ARTICLE 111. </span>
@@ -145,7 +145,7 @@
         </a>
         </div>
         <div class="col-md-4 tile-hover">
-          <a href="#">
+          <a href="larceny.html">
           <div class="wrong red">
             <div class="tile-content">
               <span>912a. ARTICLE 112a.</span>
@@ -161,7 +161,7 @@
 
           <div class="row">
         <div class="col-md-4 tile-hover">
-          <a href="#">
+          <a href="larceny.html">
           <div class="rape red">
              <div class="tile-content">
               <span>920. ARTICLE 120.</span>
@@ -187,7 +187,7 @@
         </a>
         </div>
         <div class="col-md-4 tile-hover">
-          <a href="#">
+          <a href="larceny.html">
           <div class="assault red">
             <div class="tile-content">
               <span>928. ARTICLE 128.</span>
