--- a/scenario-04.html
+++ b/scenario-04.html
@@ -70,9 +70,12 @@
       </div>
     </div>
   </div>
-  <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 nopadding"> <a href="" class="btn btn-success continue">Continue<span class="fa fa-angle-right" aria-hidden="true"></span></a></div>
+  <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2 nopadding"> <a href="#" data-toggle="modal" data-target="#lacerny-qa" class="btn btn-success continue">Continue<span class="fa fa-angle-right" aria-hidden="true"></span></a></div>
 </div>
 </div>
+
+
+
 </div>
 <!--UCMJ SCENARIO--> 
 
@@ -85,6 +88,27 @@
   </div>
 </div>
 <!--PROGRESS BAR--> 
+
+<!-- LARCENY MODAL ONE -->
+      <div id="lacerny-qa" class="modal fade" role="dialog">
+        <div class="modal-dialog questions">
+
+          <!-- Modal content-->
+          <div class="modal-content">
+            <div class="modal-header qa-wrap">
+              <h4 class="modal-title text-center"><i class="fa fa-question-circle" aria-hidden="true"></i>What do you do?</h4>
+              <p>Upon closer inspection, you clearly see a wallet inside.</p>
+            </div>
+            <div class="modal-body qa-body">
+              <a href="#" class="btn-qa qa-btn">Close the Locker</a>
+              <a href="#" class="btn-qa qa-btn">Report the issue to a superior</a>
+              <a href="#" class="btn-qa qa-btn">Take the unattended valuables</a>
+            </div>
+          
+          </div>
+        </div>
+      </div><!-- LARCENY  MODAL ONE -->
+
 
 </body>
 </html>
