cordova js reference

--- a/index.html
+++ b/index.html
@@ -239,5 +239,6 @@
                           </div>
                         </div><!-- NOTE END MODAL ONE -->
 </div>
+<script type="text/javascript" src="cordova.js"></script>
 </body>
 </html>
