--- a/scenario-04.html
+++ b/scenario-04.html
@@ -54,7 +54,7 @@
       <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 scenario">
         <img src="img/scenario-04.jpg">
         <div class="box">
-          <h4>Early in the morning, your fellow recruits prepare to move out on a busy training schedule...</h4>
+          <h4>Upon closer inspection, you clearly see a wallet inside.</h4>
         </div>
       </div>
     </div>
