--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
 			<div class="container-fluid nav-header">
 				<div class="row">
 					<div class="col-md-6">
-						<ul class="nav nav-pills">
-							<li role="presentation" class="active"><a href="#">All</a></li>
-							<li role="presentation"><a href="#">Complete</a></li>
-							<li role="presentation"><a href="#">Underway</a></li>
-							<li role="presentation"><a href="#">Incomplete</a></li>
+						<ul class="nav nav-pills" id="articles-progress-filter">
+							<li role="presentation" class="active"><a href="#" data-progress='all'>All</a></li>
+							<li role="presentation"><a href="#" data-progress="complete">Complete</a></li>
+							<li role="presentation"><a href="#" data-progress="underway">Underway</a></li>
+							<li role="presentation"><a href="#" data-progress="new">New</a></li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-md-offset-2"><input type="text" class="form-control" placeholder="Search"></div>
@@ -201,6 +201,7 @@
 		<script type="text/javascript" src="cordova.js"></script>
 		<script type="text/javascript" src="js/jquery.js"></script>
 		<script type="text/javascript" src="js/bootstrap.js"></script>
+		<script type="text/javascript" src="js/isotope.pkgd.min.js"></script>
 		<script type="text/javascript" src="js/webslidemenu.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
