--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
 							<li role="presentation"><a href="#" data-progress="new">New</a></li>
 						</ul>
 					</div>
-					<div class="col-md-4 col-md-offset-2"><input type="text" class="form-control" placeholder="Search"></div>
+					<div class="col-md-4 col-md-offset-2">
+						<div class="search-wrapper"><input type="text" class="form-control" placeholder="Search" id="search-box"><i class="search-clear" style="display:none;">&times;</i></div>
+					</div>
 				</div>
 			</div>
 			<div class="container-fluid">
