progress and search updates

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 						<ul class="nav nav-pills" id="articles-progress-filter">
 							<li role="presentation" class="active"><a href="#" data-progress='all'>All</a></li>
 							<li role="presentation"><a href="#" data-progress="complete">Complete</a></li>
-							<li role="presentation"><a href="#" data-progress="underway">Underway</a></li>
+							<li role="presentation"><a href="#" data-progress="underway">Incomplete</a></li>
 							<li role="presentation"><a href="#" data-progress="new">New</a></li>
 						</ul>
 					</div>
