adds article reference functionality

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 						<span id="article-article">921. Article 121.</span>
 						<h2 id="article-title">Larceny and Wrongful Appropriation</h2>
 						<p id="article-description">Aliquam et mattis turpis. Etiam tincidunt ex vel leo luctus accumsan. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nullam commodo nisl ac vestibulum convallis.</p>
-						<a href="#" class="btn btn-primary">Read Article</a>
+						<a href="#" class="btn btn-primary btn-read">Read Article</a>
 					</div>
 				</div>
 			</div>
@@ -169,7 +169,7 @@
 				<!-- Modal content-->
 				<div class="modal-content">
 					<div class="modal-header modal-bkgd">
-						<h1>UCMJ Primer Articles</h1>
+						<h1>UCMJ Article Reference</h1>
 						<button type="button" class="close" data-dismiss="modal">&times;</button>
 					</div>
 					<div class="modal-body">
