new article asset directory structure

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		</div>
 
 		<div id="article" style="display:none;" class="screen screen-article">
-			<div class="container-fluid larceny-banner">
+			<div class="container-fluid" id="article-banner">
 				<div class="row">
 					<div class="banner">
 						<span id="article-article">921. Article 121.</span>
