mark's updates (other than article explorer)

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<a href="#" id="btn-article-back" class="btn-top screen-scenario" style="display:none;"><span class="fa fa-chevron-left"></span>Back</a>
 					</div>
 					<div class="col-xs-4">
-						<h3 class="title">Primer</h3>
+						<h3 class="title">UCMJ Primer</h3>
 					</div>
 					<div class="col-xs-4 view">
 						<!-- <h3 Class="view"><a href="#">View All Articles<i class="fa fa-newspaper-o" aria-hidden="true"></i></a></h3> -->
@@ -156,7 +156,7 @@
 					</div>
 					<div class="modal-footer">
 						<a href="#" class="btn btn-primary btn-block btn-test-tryagain">Try Again</a>
-						<a href="#" class="btn btn-secondary btn-block btn-test-toarticle">View Article</a>
+						<a href="#" class="btn btn-primary btn-block btn-test-toarticle">Return to Article</a>
 					</div>
 				</div><!-- /.modal-content -->
 			</div><!-- /.modal-dialog -->
