adds article library popup

--- a/index.html
+++ b/index.html
@@ -172,28 +172,16 @@
 						<h1>UCMJ Article Reference</h1>
 						<button type="button" class="close" data-dismiss="modal">&times;</button>
 					</div>
-					<div class="modal-body">
-						<div class="modal-article">
-							<span>886. ARTICLE 86.</span>
-							<h2>Absence Without Leave</h2>
-							<p>Any member of the armed forces who, without authority:</p>
-							<ol class="primer-articles">
-								<li>Fails to go to his appointed place of duty at the time prescribed;</li>
-								<li>Goes from that place; or999</li>
-								<li>Absents himself or remains absent from his unit, organization, or place of duty at which he is required to be at the time prescribed; shall be punished as a court-martial may direct.
-							</ol>
-							</ol>
+					<div class="modal-body clearfix">
+
+						<ul class="primer-nav">
+							
+						</ul>
+
+						<div class="primer-articles">
+							
 						</div>
-						<div class="modal-article">
-							<span>892. ARTICLE 92.</span>
-							<h2>Failure to Obey Order or Regulation</h2>
-							<p>Any person subject to this chapter who:</p>
-							<ol class="primer-articles">
-								<li>Violates or fails to obey any lawful general order or regulation;</li>
-								<li>Having knowledge of any other lawful order issued by any member of the armed forces, which it is his    duty to obey, fails to obey the order; or</li>
-								<li>Is derelict in the performance of his duties; shall be punished as a court-martial may dire</li>
-							</ol>
-						</div>
+
 					</div>
 				</div>
 			</div>
