adjusts sexual assault article text

--- a/ucmj.html
+++ b/ucmj.html
@@ -1574,7 +1574,7 @@
 <p>is guilty of involuntary manslaughter and shall be punished as a court-martial may direct.</p>
 
 <div id="rape">
-	<span>920. ART. 120. </span><h3>RAPE AND CARNAL KNOWLEDGE</h3>
+	<span>920. ART. 120. </span><h3>RAPE AND SEXUAL ASSAULT</h3>
 
 	<p><strong>(a)</strong> Rape. Any person subject to this chapter who commits a sexual act upon another person by—</p>
 	<p class="indent indent-1"><strong>(1)</strong> Using unlawful force against that other person;</p>
