--- a/index.html
+++ b/index.html
@@ -193,6 +193,7 @@
 		<script type="text/javascript" src="js/bootstrap.js"></script>
 		<script type="text/javascript" src="js/isotope.pkgd.min.js"></script>
 		<script type="text/javascript" src="js/webslidemenu.js"></script>
+		<script type="text/javascript" src="js/plugins.js"></script>
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
 </html>
