updated with JAG edits - 1.3

--- a/ucmj.html
+++ b/ucmj.html
@@ -1317,6 +1317,15 @@
 	<p>shall be punished as a court-martial may direct.</p>
 </div>
 
+<div id="sentinel">
+	<span>895. ART. 95. </span><h3>OFFENSES BY SENTINEL OR LOOKOUT</h3>
+
+	<p class=""><strong>(a)</strong> DRUNK OR SLEEPING ON POST, OR LEAVING POST BEFORE BEING RELIEVED.-Any sentinel or lookout who is drunk on post, who sleeps on post, or who leaves post before being regularly relieved, shall be punished-</p>
+	<p class="indent indent-1"><strong>(1)</strong> if the offense is committed in time of war, by death or such other punishment as a court-martial may direct; and</p>
+	<p class="indent indent-1"><strong>(2)</strong> if the offense is committed other than in time of war, by such punishment, other than death, as a court-martial may direct.</p>
+	<p class=""><strong>(b)</strong> LOITERING OR WRONGFULLY SITTING ON POST.-Any sentinel or lookout who loiters or wrongfully sits down on post shall be punished as a court-martial may direct.</p>
+</div>
+
 <span>893. ART. 93. </span><h3>CRUELTY AND MALTREATMENT</h3>
 
 <p>Any person subject to this chapter who is guilty of cruelty toward, or oppression or maltreatment of, any person subject to his orders shall be punished as a court-martial may direct.</p>
@@ -1529,7 +1538,7 @@
 
 	<p class="indent indent-1"><strong>(1)</strong> opium, heroin, cocaine, amphetamine, lysergic acid diethylamide, methamephetamine, penecyclidine, barbituric acid, and marijuana, and any compound or derivative of any such substance.</p>
 
-	<p class="indent indent-1"><strong>(2)</strong> Any substance not specified in clause (1) that is listed on a scheduile of controlled substances prescribed by the President for the purposes of this article.</p>
+	<p class="indent indent-1"><strong>(2)</strong> Any substance not specified in clause (1) that is listed on a schedule of controlled substances prescribed by the President for the purposes of this article.</p>
 
 	<p class="indent indent-1"><strong>(3)</strong> Any other substance not specified in clause (1) or contained on a list prescribed by the President under clause (2) that is listed in Schedules I through V of section 202 of the Controlled Substances Act (21 U.S.C. 812).</p>
 </div>
@@ -1641,7 +1650,7 @@
 
 	<p class="indent indent-1"><strong>(1)</strong> with intent permanently to deprive or defraud another person of the use and benefit of property or to appropriate it to his won use or the use of any person other than the owner, steals that property and is guilty of larceny; or</p>
 
-	<p class="indent indent-1"><strong>(2)</strong> with intent to temporarily to deprive or defraud another person of the use and benefit of property or to appropriate to his own use the use of any person other than the owner, is guilty of wrongful appropriation.</p>
+	<p class="indent indent-1"><strong>(2)</strong> with intent to temporarily deprive or defraud another person of the use and benefit of property or to appropriate to his own use the use of any person other than the owner, is guilty of wrongful appropriation.</p>
 
 	<p><strong>(b)</strong> Any person found guilty of larceny or wrongful appropriation shall be punished as a court-martial may direct.</p>
 </div>
